@@ -9,12 +9,18 @@ Scenes are loaded lazily, that is, only when needed.  A Scene is built the first
 The Stage is injected from Main into each View and from there into each controller.  This combination of FxmlInfo Map and Stage provides all the control need for each Scene.
 
 ## Requirements
-**javafx-multi-scene** runs on Java 11 or above.  If you want to run on a version of Java lower that 11, checkout the `pre-javafx-11` branch.
+**javafx-multi-scene-fxml** runs on Java 11 or above.  If you want to run on a version of Java lower that 11, checkout the `pre-javafx-11` branch (However, this branch is beginning to diverge).
 
 ## Launching
-Launch **javafx-multi-scene** from your favorite IDE, or with [Maven](https://maven.apache.org/):
+Launch **javafx-multi-scene-fxml** with [Maven](https://maven.apache.org/):
 
     mvn clean compile exec:java
+
+Launching from an IDE can be tricky.  You will have to add the VM arguments
+
+    --module-path /path/to/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.fxml
+
+to `SceneFxmlAppLauncher` or launch `SceneFxmlApp` directly.
 
 ## What to notice
 When the application launches, you are presented to the main view, with buttons for three separate scenes and a close button.  Press a scene button and you will go to one of three different scenes.  Each scene also has a close button, which is possible because the stage from Main is injected into each.  On the console you can see that each scene is loaded only once and only when needed.
